# merkelrex

./: CMakeLists.txt  CSVReader.cpp  CSVReader.h  MerkelMain.cpp  MerkelMain.h  OrderBook.cpp  OrderBook.h  OrderBookEntry.cpp  OrderBookEntry.h  Wallet.cpp  Wallet.h  main.cpp  test.csv
